add export as docker-compose.yaml.
